WIP on Shock ACLs, tests starts up mongo & shock

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -1,8 +1,19 @@
 # DO NOT CHECK CHANGES TO THIS FILE INTO GIT!
 
 [ShockClientTest]
-# The url for the shock instance to test against.
-test.shock.url = http://localhost:7044
+# Shock exe file location 
+test.shock.exe = /kb/deployment/bin/shock-server
+
+# MongoDB exe file location
+test.mongo.exe = /kb/runtime/bin/mongod
+
+# Temp directory for various database and server files. This path cannot have
+# any system specific information (e.g. ~, $HOME, etc)
+test.temp.dir = shockclient_test_temp
+
+# Set to 'true' (without quotes) to keep temporary test files
+# (for debugging purposes), any other value is false
+test.temp.dir.keep=false
 
 # Two *different* KBase user accounts with different email addresses.
 test.user1 =
