--- a/build.xml
+++ b/build.xml
@@ -30,6 +30,9 @@
     <include name="junit/junit-4.9.jar"/>
     <include name="apache_commons/commons-codec-1.8.jar"/>
     <include name="apache_commons/commons-io-2.4.jar"/>
+    <include name="apache_commons/commons-collections-3.2.1.jar"/>
+    <include name="apache_commons/commons-lang-2.4.jar"/>
+    <include name="apache_commons/velocity-1.7.jar"/>
   </fileset>
 	
   <union id="shocktests">
@@ -80,17 +83,23 @@
 
   <target name="test" depends="compile" description="run tests">
     <fail unless="compile.jarfile" message="property compile.jarfile not set."/>
-    <fail unless="test.shock.url" message="property test.shock.url not set."/>
+    <fail unless="test.shock.exe" message="property test.shock.exe not set."/>
+    <fail unless="test.mongo.exe" message="property test.mongo.exe not set."/>
+    <fail unless="test.temp.dir" message="property test.temp.dir not set."/>
     <fail unless="test.user1" message="property test.user1 not set."/>
     <fail unless="test.pwd1" message="property test.pwd1 not set."/>
     <fail unless="test.user2" message="property test.user2 not set."/>
     <fail unless="test.pwd2" message="property test.pwd2 not set."/>
     <echo message="starting ${package} tests"/>
+    <echo message="testing against jar ${compile.jarfile}"/>
     <junit failureproperty="test.failed">
       <classpath path="${compile.jarfile}"/>
       <classpath refid="compile.classpath"/>
       <formatter type="plain" usefile="false" />
-      <sysproperty key="test.shock.url" value="${test.shock.url}"/>
+      <sysproperty key="test.shock.exe" value="${test.shock.exe}"/>
+      <sysproperty key="test.mongo.exe" value="${test.mongo.exe}"/>
+      <sysproperty key="test.temp.dir" value="${test.temp.dir}"/>
+      <sysproperty key="test.temp.dir.keep" value="${test.temp.dir.keep}"/>
       <sysproperty key="test.user1" value="${test.user1}"/>
       <sysproperty key="test.pwd1" value="${test.pwd1}"/>
       <sysproperty key="test.user2" value="${test.user2}"/>
