--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,7 @@
     <include name="apache_commons/velocity-1.7.jar"/>
     <include name="mongo/mongo-java-driver-2.13.3.jar"/>
     <include name="kbase/common/kbase-common-0.0.15.jar"/>
+    <include name="jsemver/java-semver-0.9.0.jar"/>
   </fileset>
 	
   <union id="shocktests">
