Update for new shock controller & attempts to handle globus clock skew

--- a/build.xml
+++ b/build.xml
@@ -83,6 +83,7 @@
   <target name="test" depends="compile" description="run tests">
     <fail unless="compile.jarfile" message="property compile.jarfile not set."/>
     <fail unless="test.shock.exe" message="property test.shock.exe not set."/>
+    <fail unless="test.shock.version" message="property test.shock.version not set."/>
     <fail unless="test.mongo.exe" message="property test.mongo.exe not set."/>
     <fail unless="test.temp.dir" message="property test.temp.dir not set."/>
     <fail unless="test.user1" message="property test.user1 not set."/>
@@ -96,6 +97,7 @@
       <classpath refid="compile.classpath"/>
       <formatter type="plain" usefile="false" />
       <sysproperty key="test.shock.exe" value="${test.shock.exe}"/>
+      <sysproperty key="test.shock.version" value="${test.shock.version}"/>
       <sysproperty key="test.mongo.exe" value="${test.mongo.exe}"/>
       <sysproperty key="test.temp.dir" value="${test.temp.dir}"/>
       <sysproperty key="test.temp.dir.keep" value="${test.temp.dir.keep}"/>
