--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
     <include name="apache_commons/http/httpclient-4.3.1.jar"/>
     <include name="apache_commons/http/httpcore-4.3.jar"/>
     <include name="apache_commons/http/httpmime-4.3.1.jar"/>
-    <include name="kbase/auth/kbase-auth-0.3.1.jar"/>
+    <include name="kbase/auth/kbase-auth-0.3.2.jar"/>
     <include name="jackson/jackson-annotations-2.2.3.jar"/>
     <include name="jackson/jackson-core-2.2.3.jar"/>
     <include name="jackson/jackson-databind-2.2.3.jar"/>
@@ -92,7 +92,7 @@
     <fail unless="test.pwd2" message="property test.pwd2 not set."/>
     <echo message="starting ${package} tests"/>
     <echo message="testing against jar ${compile.jarfile}.jar"/>
-    <junit failureproperty="test.failed">
+    <junit failureproperty="test.failed" fork="yes">
       <classpath path="${compile.jarfile}.jar"/>
       <classpath refid="compile.classpath"/>
       <formatter type="plain" usefile="false" />
