--- a/test/test.cfg
+++ b/test/test.cfg
@@ -1,6 +1,11 @@
 # DO NOT CHECK CHANGES TO THIS FILE INTO GIT!
 
 [ShockClientTest]
+
+# The path to the jars dir inside the jars repo, e.g.
+# [path to jars repo]/lib/jars
+test.jars.dir =
+
 # Shock exe file location 
 test.shock.exe = /kb/deployment/bin/shock-server
 # Shock exe file version
@@ -16,9 +21,3 @@ test.temp.dir = shockclient_test_temp
 # Set to 'true' (without quotes) to keep temporary test files
 # (for debugging purposes), any other value is false
 test.temp.dir.keep=false
-
-# Two *different* KBase user accounts with different email addresses.
-test.user1 =
-test.pwd1 =
-test.user2 =
-test.pwd2 =
