--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/jars/lib/jars/easystream/easystream-1.2.13.jar"/>
 	<classpathentry kind="lib" path="/jars/lib/jars/slf4j/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="lib" path="/jars/lib/jars/jackson/jackson-core-2.2.3.jar" sourcepath="/jars/lib/jars/jackson/jackson-core-2.2.3-sources.jar"/>
@@ -14,9 +17,6 @@
 	<classpathentry kind="lib" path="/jars/lib/jars/apache_commons/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="/jars/lib/jars/apache_commons/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/jars/lib/jars/apache_commons/commons-lang3-3.1.jar"/>
-	<classpathentry kind="lib" path="/jars/lib/jars/apache_commons/http/httpclient-4.3.1.jar" sourcepath="/home/crusherofheads/Downloads/httpclient-4.3.1-sources.jar"/>
-	<classpathentry kind="lib" path="/jars/lib/jars/apache_commons/http/httpcore-4.3.jar" sourcepath="/home/crusherofheads/Downloads/httpcore-4.3-sources.jar"/>
-	<classpathentry kind="lib" path="/jars/lib/jars/apache_commons/http/httpmime-4.3.1.jar"/>
 	<classpathentry kind="lib" path="/jars/lib/jars/texttable/text-table-formatter-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/jars/lib/jars/apache_commons/commons-collections-3.2.1.jar" sourcepath="/jars/lib/jars/apache_commons/commons-collections-3.2.1-sources.jar">
 		<attributes>
@@ -31,5 +31,8 @@
 	<classpathentry kind="lib" path="/jars/lib/jars/google/guava-18.0.jar"/>
 	<classpathentry kind="lib" path="/jars/lib/jars/kbase/common/kbase-common-0.0.25.jar"/>
 	<classpathentry kind="lib" path="/jars/lib/jars/kbase/auth/kbase-auth-0.4.4.jar"/>
+	<classpathentry kind="lib" path="/jars/lib/jars/apache_commons/http/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="/jars/lib/jars/apache_commons/http/httpcore-4.4.5.jar"/>
+	<classpathentry kind="lib" path="/jars/lib/jars/apache_commons/http/httpmime-4.5.8.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
-
