--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,10 +59,10 @@ jobs:
           # set up test config
           cd $HOMEDIR
           cp test/test.cfg test/test-actual.cfg
-          sed -i "s#^test.jars.dir.*#test.jars.dir=$JARSDIR#" test-actual.cfg
-          sed -i "s#^test.mongo.exe.*#test.mongo.exe=$MONGOD#" test-actual.cfg
-          sed -i "s#^test.shock.exe.*#test.shock.exe=$SHOCKEXE#" test-actual.cfg
-          cat test-actual.cfg
+          sed -i "s#^test.jars.dir.*#test.jars.dir=$JARSDIR#" test/test-actual.cfg
+          sed -i "s#^test.mongo.exe.*#test.mongo.exe=$MONGOD#" test/test-actual.cfg
+          sed -i "s#^test.shock.exe.*#test.shock.exe=$SHOCKEXE#" test/test-actual.cfg
+          cat test/test-actual.cfg
 
       - name: Run tests
         shell: bash
